--- a/restock.html
+++ b/restock.html
@@ -80,7 +80,7 @@
   </div>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/TON_SCRIPT_ID/exec"; // ← à remplacer
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwSrlEsweXaONxhoQi6IXTwBlHBDvOQsatt2pCJ-gcHS8jFW-I0JWxsjQVoYGhWe38BKw/exec";
 
     function ajouter() {
       const camion = document.getElementById("camion").value.trim();
@@ -114,7 +114,7 @@
     }
 
     function parseDateFr(str) {
-      if (!str.includes("/")) return new Date(str); // supporte aussi les dates ISO
+      if (!str.includes("/")) return new Date(str);
       const [day, month, year] = str.split("/");
       return new Date(`${year}-${month}-${day}`);
     }
